# praborrow-defense

./: Cargo.toml  README.md  README_ID.md
src/: lib.rs  visitor.rs
tests/: no_panic_test.rs
tests/ui/: invalid_syntax.rs  invalid_syntax.stderr
