[package]
name = "praborrow-defense"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for invariant verification. Generates runtime checks and SMT-based formal verification."
keywords = ["macro", "invariant", "validation", "proc-macro", "formal-verification"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

