[package]
name = "praborrow-defense"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for invariant verification. Generates runtime checks and SMT-based formal verification."
keywords = ["macro", "invariant", "validation", "proc-macro", "formal-verification"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
praborrow-prover = { path = "../praborrow-prover", default-features = false }

[dev-dependencies]
praborrow-core = { path = "../praborrow-core" }
sha2 = "0.10"
trybuild = "1.0.114"
