[package]
name = "praborrow-defense"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for invariant verification. Generates runtime checks and SMT-based formal verification."
keywords = ["macro", "invariant", "validation", "proc-macro", "formal-verification"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
praborrow-prover = { workspace = true }

[dev-dependencies]
praborrow-core = { workspace = true }
sha2 = { workspace = true }
trybuild = { workspace = true }
